--- a/about.html
+++ b/about.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Imam Hafsin Model International School</title>
+    <title>Imam Hafsin Model International School</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> 
-   <body>
-
-    <!-- First Navbar -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="style.css"> 
+ </head>
+<body>
+       <!-- First Navbar -->
 <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
     <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
@@ -47,7 +46,7 @@
         </ul>
     </div>
   </nav>
-    <!-- Hero Section -->
+        <!-- Hero Section -->
     <div class="hero-section">
         <h1>Imam Hafsin Model International School</h1>
     </div>
@@ -158,35 +157,35 @@
     </div>
 </div>
 
-    <!-- Footer -->
-    <div class="footer bg-light mt-5">
-        <div class="row text-center py-3">
-            <div class="col-md-4">
-                <p><strong>Imam Hafsin Model International School</strong></p>
-                <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-                <p>Email: imamhafsin@gmail.com</p>
-                <p>Phone: 08030999939939399</p>
-            </div>
-            <div class="col-md-4">
-                <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-facebook"></i> Facebook
-                </a>
-                <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-instagram"></i> Instagram
-                </a>
-                <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-twitter"></i> Twitter
-                </a>
-                <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-whatsapp"></i> WhatsApp
-                </a>
-            </div>
-            <div class="col-md-4">
-                <p>&copy; IHMIS 2024</p>
-                <p>All rights reserved.</p>
-            </div>
+   <!-- Footer -->
+   <div class="footer bg-light mt-5">
+    <div class="row text-center py-3">
+        <div class="col-md-4">
+            <p><strong>Imam Hafsin Model International School</strong></p>
+            <p>622, Yakasai Street, Tal'udu G/Kaya</p>
+            <p>Email: imamhafsin@gmail.com</p>
+            <p>Phone: 08030999939939399</p>
+        </div>
+        <div class="col-md-4">
+            <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
+                <i class="fab fa-facebook"></i> Facebook
+            </a>
+            <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
+                <i class="fab fa-twitter"></i> Twitter
+            </a>
+            <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+        </div>
+        <div class="col-md-4">
+            <p>&copy; IHMIS 2024</p>
+            <p>All rights reserved.</p>
         </div>
     </div>
+</div>
 <!-- Back to top button -->
 <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
@@ -194,9 +193,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script src="login.js"></script>
-
-
+<script src="contact.js"></script>
 </body>
 </html>
