--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -52,8 +52,8 @@
             <li class="nav-item">
                 <a class="nav-link text-danger" href="student_dashboard.html">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="dropdown-item" href="#" id="viewIDCard">View ID Card</a>
+             <li class="nav-item">
+                <a class="nav-link" href="#" id="viewIDCard">View ID Card</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
@@ -66,7 +66,7 @@
             </li>
              <!-- Logout button -->
              <li class="nav-item"> 
-                <a class="nav-link ml-5" href="#" id="logout">Logout</a>
+                <a class="nav-link ml-5" href="#" id="student_logout">Logout</a>
             </li>
         </ul>
     </div>
