--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
               <ul class="dropdown-menu" aria-labelledby="loginDropdown">
                 <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
                 <li><a class="dropdown-item" href="login.html">Staff</a></li>
-                <li><a class="dropdown-item" href="#studentLogin.html">Student</a></li>
+                <li><a class="dropdown-item" href="studentLogin.html">Student</a></li>
               </ul>
           </li>
           <li class="nav-item">
