--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -80,12 +80,12 @@
             </div>
             <div class="card-body text-center">
                 <div class="profile-picture-container">
-                    <img src="" id="profile-pic" class="profile-picture" alt="Profile Picture">
+                    <img id="profile-pic" class="profile-picture" src="default-profile.png" alt="Profile Picture">
                 </div>
                 <h5 class="card-title mt-3" id="studentName"></h5>
-                <p class="card-text">Student ID: <span id="studentID"></span></p>
-                <p class="card-text">Class: <span id="class"></span></p>
-                <p class="card-text">Guardian Phone: <span id="guardianPhone"></span></p>
+                <p class="card-text"><strong>Student ID:</strong> <span id="studentID"></span></p>
+                <p class="card-text"></p><strong>Class:</strong> <span id="class"></span></p>
+                <p class="card-text"><strong>Gurdian Phone:</strong> <span id="guardianPhone"></span></p>
                 <div class="signature"></div>
             </div>
         </div>
@@ -107,14 +107,14 @@
           <div class="id-card">
             <div class="modal-header-content">
               <img src="logo.jpg" alt="School Logo" class="id-card-logo">
-              <h5 class="modal-title">CompuTech Nexus Academy</h5>
-              <h6 class="modal-title">Student ID Card</h6>
+              <h6 class="modal-title">Imam Hafsin Model International School <br>622, Yakasai Street, Tal'udu G/Kaya<br>Gwale L.G.A, Kano State, Nigeria. </h6>
+              <h5 class="modal-title" style="text-decoration: underline;">Student ID Card</h5>
             </div>
-            <img src="" id="modalProfilePic" style="max-width: 150px; max-height: 150px;" alt="Profile Picture">
+            <img id="modalProfilePic" src="default-profile.png" alt="Profile Picture"  class="profile-picture mb-3">
         <h5 class="card-title mt-3" id="modalStudentName"></h5>
-        <p class="card-text">Student ID: <span id="modalStudentID"></span></p>
-        <p class="card-text">Class: <span id="modalClass"></span></p>
-        <p class="card-text">Guardian Phone: <span id="modalGuardianPhone"></span></p>
+        <p class="card-text"><strong>Student ID:</strong> <span id="modalStudentID"></span></p>
+        <p class="card-text"><strong>Class:</strong> <span id="modalClass"></span></p>
+        <p class="card-text"><strong>Gurdian Phone:</strong> <span id="modalGuardianPhone"></span></p>
         <div class="signature">
             <p>Signature: ________________________</p>
         </div>
@@ -123,11 +123,12 @@
           <!-- Back of ID Card -->
           <div class="id-card-back">
             <h5>Usage Policy</h5>
-            <p>This ID card is issued to the bearer as a means of identification at CompuTech Nexus Academy. It remains the property of the academy and must be surrendered upon request. It is non-transferable and is to be used solely by the person to whom it is issued. For security reasons, the card must be signed immediately upon receipt. If found, please return it to:</p>
-            <p>CompuTech Nexus Academy, 32 Km, Maiduguri Road, Gano 2 Primary School, Dawakin Kudu L.G.A</p>
-            <p>Contact Numbers: 08030909793, 08033643018, 09123754300</p>
-            <p>Email:<a href="mailto:1440shamsusabo@gmail.com">1440shamsusabo@gmail.com</a></p>
-          </div>
+            <p>This ID card is issued to students for identification purposes at Imam Hafsin Model International School. It remains the property of the school and must be surrendered upon request. The card is non-transferable and should only be used by the authorized student. For security reasons, it must be signed upon receipt. If found, please return it to:</p>
+            <p>Imam Hafsin Model International School<br>622, Yakasai Street, Tal'udu G/Kaya<br>Gwale L.G.A, Kano State, Nigeria.</p>
+            <p>Contact:</p>
+            <p>08030999939939399</p>
+            <p><a href="mailto:1440shamsusabo@gmail.com">imamhafsin@gmail.com</a></p>
+          </div>          
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" onclick="window.print()">Print</button>
