--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -60,7 +60,7 @@
                     Result
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                  <li><a class="dropdown-item" href="#">Terminal</a></li>
+                  <li><a class="dropdown-item" href="student_term_result.html">Terminal</a></li>
                   <li><a class="dropdown-item" href="login.html">Sessional</a></li>
                 </ul>
             </li>
