--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -59,9 +59,11 @@
                 <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
                     Result
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                  <li><a class="dropdown-item" href="student_term_result.html">Terminal</a></li>
-                  <li><a class="dropdown-item" href="login.html">Sessional</a></li>
+                <ul class="dropdown-menu" aria-labelledby="loginDropdown" id="student-links">
+                  <li><a href="student_term_result.html" id="student-term-result-link">Student Term Result</a>
+                  </li>
+                  <li><a href="student_session_result.html" id="student-session-result-link">Student Session Result</a>
+                   </li>
                 </ul>
             </li>
              <!-- Logout button -->
@@ -169,7 +171,7 @@
   </div>
   <!-- Back to top button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-  <script src="student_dashboard.js"></script>
+  <script src="student-dashboard.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
