--- a/student_term_result.html
+++ b/student_term_result.html
@@ -41,36 +41,43 @@
    </nav>
 
    <!-- Content Container -->
-   <div class="center-container bg-light mt-auto">
-       <h5 id="select-class-header" class="text-center">Enter Student ID and View Results</h5>
-       <div id="studentIDSelection" class="card shadow mt-4 p-4">
-           <div class="form-group">
-               <label for="studentID">Student ID:</label>
-               <input type="text" id="studentID" class="form-control" placeholder="Enter Student ID" required>
-           </div>
-           <div class="form-group">
-               <label for="termSelect">Term:</label>
-               <select class="form-control" id="termSelect" required>
-                   <option value="First Term">First Term</option>
-                   <option value="Second Term">Second Term</option>
-                   <option value="Third Term">Third Term</option>
-               </select>
-           </div>
-           <div class="form-group">
-               <label for="sessionSelect">Session:</label>
-               <select class="form-control" id="sessionSelect" required>
-                   <option value="2024/2025">2024/2025</option>
-                   <option value="2025/2026">2025/2026</option>
-                   <option value="2026/2027">2026/2027</option>
-               </select>
-           </div>
-           <button id="view-students" type="button" class="btn btn-success">View Students</button>
-       </div>
-       <button id="back-to-selection" type="button" class="btn btn-success mt-3" style="display: none;">Back to Class Selection</button>
-       <h4 id="selected-class-header" class="mt-4" style="display: none;"></h4>
-       <ul id="student-list" class="list-unstyled"></ul>
-       <button class="close-btn text-center" onclick="goBack()">Close</button>
-   </div>
+   <!-- Content Container -->
+<div class="center-container bg-light mt-auto">
+    <h5 id="select-class-header" class="text-center">Enter Student ID and View Results</h5>
+    <div id="studentIDSelection" class="card shadow mt-4 p-4">
+        <div class="form-group">
+            <label for="studentID">Student ID:</label>
+            <input 
+                type="text" 
+                id="studentID" 
+                class="form-control" 
+                placeholder="Enter Student ID" 
+                required 
+                readonly> <!-- Added readonly attribute -->
+        </div>
+        <div class="form-group">
+            <label for="termSelect">Term:</label>
+            <select class="form-control" id="termSelect" required>
+                <option value="First Term">First Term</option>
+                <option value="Second Term">Second Term</option>
+                <option value="Third Term">Third Term</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="sessionSelect">Session:</label>
+            <select class="form-control" id="sessionSelect" required>
+                <option value="2024/2025">2024/2025</option>
+                <option value="2025/2026">2025/2026</option>
+                <option value="2026/2027">2026/2027</option>
+            </select>
+        </div>
+        <button id="view-students" type="button" class="btn btn-success">View Students</button>
+    </div>
+    <button id="back-to-selection" type="button" class="btn btn-success mt-3" style="display: none;">Back to Class Selection</button>
+    <h4 id="selected-class-header" class="mt-4" style="display: none;"></h4>
+    <ul id="student-list" class="list-unstyled"></ul>
+    <button class="close-btn text-center" onclick="goBack()">Close</button>
+</div>
 
    <!-- Footer -->
    <div class="footer bg-light mt-5">
@@ -109,5 +116,20 @@
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
    <script src="student_term.js"></script>
+   <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const studentIDField = document.getElementById("studentID");
+        const storedStudentID = sessionStorage.getItem("studentID");
+
+        if (storedStudentID) {
+            studentIDField.value = storedStudentID; // Populate the field with the stored Student ID
+            studentIDField.disabled = true; // Disable the field to prevent editing
+        } else {
+            alert("No Student ID found. Please return to the previous page.");
+            window.history.back(); // Go back if no Student ID is found
+        }
+    });
+</script>
+
 </body>
 </html>
