--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -60,9 +60,9 @@
                     Result
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="loginDropdown" id="student-links">
-                  <li><a href="student_term_result.html" id="student-term-result-link">Student Term Result</a>
+                  <li><a href="student_term_result.html" id="student-term-result-link">Term Result</a>
                   </li>
-                  <li><a href="student_session_result.html" id="student-session-result-link">Student Session Result</a>
+                  <li><a href="student_session_result.html" id="student-session-result-link">Session Result</a>
                    </li>
                 </ul>
             </li>
