--- a/student_term_result.html
+++ b/student_term_result.html
@@ -13,33 +13,38 @@
     <link rel="stylesheet" href="view.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-   <!-- First Navbar (Images and Admin Dashboard Text) -->
-   <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-       <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-       <span class="navbar-brand mx-auto text-dark">Students Management</span>
-       <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-   </nav>
-
-   <!-- Second Navbar (Navbar Items) -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-       <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
-           <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-           <ul class="navbar-nav">
-               <li class="nav-item">
-                   <a class="nav-link text-danger" href="admin-dashboard.html">Home</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link text-danger" href="student_management.html">Students Management</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link text-danger" href="staff_management.html">Staff Management</a>
-               </li>
-           </ul>
-       </div>
-   </nav>
-
+     <!-- First Navbar -->
+<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+    <span class="navbar-brand mx-auto text-dark">Student&nbsp;&nbsp;Dashboard</span>
+    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+  </nav>
+  
+  <!-- Second Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="student_dashboard.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                    Result
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="loginDropdown" id="student-links">
+                  <li><a href="student_term_result.html" id="student-term-result-link">Term Result</a>
+                  </li>
+                  <li><a href="student_session_result.html" id="student-session-result-link">Session Result</a>
+                   </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+  </nav>
    <!-- Content Container -->
    <!-- Content Container -->
 <div class="center-container bg-light mt-auto">
