--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   
   <!-- Second Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
         <span class="navbar-toggler-icon"></span>
-    </button>
+    </div>
     <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
