--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css"> 
  </head>
 <body>
-       <!-- First Navbar -->
+        <!-- First Navbar -->
 <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
     <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
@@ -18,9 +18,9 @@
   
   <!-- Second Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
         <span class="navbar-toggler-icon"></span>
-    </button>
+    </div>
     <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -46,6 +46,7 @@
         </ul>
     </div>
   </nav>
+   
     <!-- Header -->
     <header class="bg-primary text-white text-center py-4">
         <h1>Contact Us</h1>
