--- a/login.html
+++ b/login.html
@@ -10,44 +10,44 @@
 </head>
 <body>
 
-<!-- First Navbar -->
-<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-  <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
-  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-</nav>
-
-<!-- Second Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-  <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
-      <span class="navbar-toggler-icon"></span>
-  </button>
-  <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
-  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link text-danger" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link text-danger" href="about.html">About</a>
-          </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
-                Login
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
-                <li><a class="dropdown-item" href="login.html">Staff</a></li>
-                <li><a class="dropdown-item" href="studentLogin.html">Student</a></li>
-              </ul>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link text-danger" href="contact.html">Contact</a>
-          </li>
-      </ul>
-  </div>
-</nav>
-
+   <!-- First Navbar -->
+   <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+    <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
+    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+  </nav>
+  
+  <!-- Second Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
+        <span class="navbar-toggler-icon"></span>
+    </div>
+    <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                  Login
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                  <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
+                  <li><a class="dropdown-item" href="login.html">Staff</a></li>
+                  <li><a class="dropdown-item" href="studentLogin.html">Student</a></li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+   
 <!-- Login Form -->
 <div class="container">
   <form action="/login" method="POST" class="border p-4 shadow-sm rounded">
