--- a/studentLogin.html
+++ b/studentLogin.html
@@ -10,7 +10,8 @@
 </head>
 <body>
  <!-- First Navbar -->
-<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+   <!-- First Navbar -->
+   <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
     <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
@@ -18,9 +19,9 @@
   
   <!-- Second Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
         <span class="navbar-toggler-icon"></span>
-    </button>
+    </div>
     <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -46,6 +47,7 @@
         </ul>
     </div>
   </nav>
+   
   
   <br><br>
 
