--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -6,7 +6,7 @@
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -17,7 +17,7 @@
   <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
   
   <!-- Navbar brand (Admin Dashboard text) centered -->
-  <span class="navbar-brand mx-auto text-dark">Staff&nbsp;&nbsp;Dashboard</span>
+  <span class="navbar-brand mx-auto text-dark">Admin&nbsp;&nbsp;Dashboard</span>
   
   <!-- Right image logo -->
   <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
@@ -52,7 +52,7 @@
   </div>
 </nav>
  <!-- Welcome Section -->
-<main class="container">
+<main class="admin-container">
   <div class="welcome-card">
     <h1>Welcome, Admin!</h1>
     <p class="welcome-message">
