--- a/add.html
+++ b/add.html
@@ -29,9 +29,9 @@
   <!-- Second Navbar (Navbar Items) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
     <!-- Toggler for mobile view -->
-    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
         <span class="navbar-toggler-icon"></span> <!-- Menu Icon -->
-    </button>
+    </div>
     <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button> <!-- Cancel Icon -->
     
   
